# DL-proj

./: .gitignore  KAGGLE_GUIDE.md  README.md  main.tex  pyproject.toml  result_analysis.ipynb
configs/: base.yaml  kaggle_wikitext103.yaml  kaggle_wikitext103_alibi.yaml  kaggle_wikitext103_learn.yaml  kaggle_wikitext103_sine.yaml  wikitext103.yaml
runs/wikitext103_alibi/: config.json
runs/wikitext103_learn/: config.json
runs/wikitext103_nopos/: config.json
runs/wikitext103_sine/: config.json
scripts/: evaluate.py  generate.py  train.py
slides/: training_pipeline.pptx
src/experiment/: __init__.py  compare.py  config.py  data.py  evaluate.py  generation.py  model.py  positional.py  train.py  utils.py
